--- a/css/indexresponsive.css
+++ b/css/indexresponsive.css
@@ -3,10 +3,6 @@
         width: 350px;
     }
 
-    .store {
-        padding-top: 30px;
-    }
-
     body {
         overflow: scroll;
         overflow-x: hidden;
@@ -42,7 +38,6 @@
         justify-content: center;
         align-items: center;
         gap: 20px;
-        padding-top: 50px;
     }
 
     .QandAdiv {
